# ultraschall-3

./: .gitignore  .gitmodules  .travis.yml  BUG_REPORT.md  CHANGELOG-DE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  INSTALL-DE.md  INSTALL.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README-DE.md  README.md  appveyor.yml  bootstrap.sh  build.bat  build.ps1  build.sh  make-installer-image.sh  make-plugin-package.sh  make-resources-package.sh  make-soundboard-package.sh  make-soundfloweruninstaller-package.sh  make-sws-package.sh  make-ultraschall-package.sh  pre-build.bat  ultraschall_release.xml  ultraschall_version.xml
Plugin/: .gitignore  CMakeLists.txt  CMakeSettings.json  bootstrap.ps1  bootstrap.sh  build-prereqs.bat  build.bat  build.ps1  build.sh  clean-prereqs.bat  clean.bat  linux.cmake  macos.cmake  reaper_ultraschall.sln  reaper_ultraschall.vcxproj  reaper_ultraschall.vcxproj.filters  targetver.h  win32.cmake
Plugin/Scripts/: ultraschall_delete_last_marker.py  ultraschall_einspieler.py  ultraschall_import_shownotes.py  ultraschall_notes.py  ultraschall_safemode_start_pause.lua  ultraschall_safemode_start_stop.lua  ultraschall_select_studiolink.lua  ultraschall_set_edit.lua  ultraschall_set_namedmarker.lua  ultraschall_set_namedmarker.py
Plugin/Scripts/Shared/: __startup.lua  ultraclock.lua  ultraschall_center_arrangeview_to_cursor.lua  ultraschall_colorpicker.lua  ultraschall_edit_id3_tags.lua  ultraschall_export_assistant.lua  ultraschall_followmode_reset.lua  ultraschall_gui_lib.lua  ultraschall_keymap.lua  ultraschall_mastermind.lua  ultraschall_mute_selected_items_in_time_range.lua  ultraschall_onair.lua  ultraschall_prepare_for_editing.lua  ultraschall_reset_firststart.lua  ultraschall_routing_snapshots.lua  ultraschall_routing_snapshots_functions.lua  ultraschall_safemode_start_pause.lua  ultraschall_safemode_start_stop.lua  ultraschall_select_studiolink.lua  ultraschall_set_colors_to_sonic_rainboom.lua  ultraschall_set_colors_to_sonic_rainboom_spread.lua  ultraschall_set_edit.lua  ultraschall_set_edit_past.lua  ultraschall_set_marker.lua  ultraschall_set_named_marker.lua  ultraschall_set_namedmarker.lua  ultraschall_set_namedmarker_play.lua  ultraschall_set_next_planned_marker.lua  ultraschall_set_shownote.lua  ultraschall_set_view_edit.lua  ultraschall_set_view_record.lua  ultraschall_set_view_setup.lua  ultraschall_set_view_story.lua  ultraschall_startscreen.lua  ultraschall_toggle_envelope_height.lua  ultraschall_toggle_follow.lua  ultraschall_toggle_mouse_selection.lua  ultraschall_toggle_peak_gain_normal_max.lua  ultraschall_toggle_playrate.lua  ultraschall_toggle_safemode_recording.lua  (+5 more)
Plugin/Scripts/Windows/: ultraschall_select_studiolink.lua
Plugin/cmake/: linux_arch.cmake  ubuntu.cmake  win32.cmake
Plugin/docs/: linux-build-instructions-for-wsl.md  linux-build-instructions.md
Plugin/en.lproj/: Localizable.strings
Plugin/framework/: IDeleteProjectMarkerService.h  IService.h  ISetProjectMarkerService.h  ServiceFactory.h  ServiceManager.h  ServiceStatus.h  SharedObjectFactory.h
Plugin/reaper/: AddChaptersAction.cpp  AddChaptersAction.h  Application.cpp  Application.h  Configuration.cpp  CustomActionFactory.cpp  CustomActionFactory.h  CustomActionManager.cpp  CustomActionManager.h  EntryPoints.cpp  EntryPoints.h  FileManager.cpp  FileManager.h  ICustomAction.h  IMetadataService.h  MessageBox.cpp  MessageBox.h  MetadataService.cpp  MetadataService.h  ProjectMarker.cpp  ProjectMarker.h  Reaper.h  ReplaceChaptersAction.cpp  ReplaceChaptersAction.h  SaveChaptersAction.cpp  SaveChaptersAction.h  SaveChaptersToProjectAction.cpp  SaveChaptersToProjectAction.h  Track.cpp  Track.h  TrackManager.cpp  TrackManager.h  reaper_ultraschall.cpp
Plugin/reaper_cmdspy/: reaper_cmdspy.cpp  reaper_cmdspy.sln  reaper_cmdspy.vcxproj.filters
Plugin/reaper_ultraschall/: .clang-format  .editorconfig  Application.cpp  Application.h  BasicMediaInformation.cpp  BasicMediaInformation.h  BinaryFileReader.cpp  BinaryFileReader.h  BinaryStream.cpp  BinaryStream.h  ByteStream.h  CMakeLists.txt  Common.h  CustomActionFactory.cpp  CustomActionFactory.h  CustomActionManager.cpp  CustomActionManager.h  FileManager.cpp  FileManager.h  FileUtilities.cpp  FileUtilities.h  Framework.h  ICommand.h  ICustomAction.h  ITagWriter.h  IUnknown.h  ImageTools.cpp  ImageTools.h  InsertChapterMarkersAction.cpp  InsertChapterMarkersAction.h  InsertMediaPropertiesAction.cpp  InsertMediaPropertiesAction.h  MP3TagWriter.cpp  MP3TagWriter.h  MP3_Interface.cpp  MP3_Interface.h  MP4TagWriter.cpp  MP4TagWriter.h  MP4_EncodingSession.cpp  MP4_EncodingSession.h  (+73 more)
Plugin/reaper_ultraschall.xcodeproj/: project.pbxproj
Plugin/src/: Application.cpp  Application.h  BinaryStream.cpp  BinaryStream.h  CMakeLists.txt  Common.h  CustomAction.cpp  CustomAction.h  CustomActionFactory.cpp  CustomActionManager.cpp  FileManager.cpp  FileManager.h  ICommand.h  ICustomAction.h  ID3V2.cpp  ID3V2.h  ID3V2Context.cpp  ID3V2Context.h  ID3V2Writer.cpp  ID3V2Writer.h  ISOBMFF.cpp  ISOBMFF.h  ISOBMFFContext.cpp  ISOBMFFContext.h  ISOBMFFWriter.cpp  ISOBMFFWriter.h  InsertChapterMarkersAction.cpp  InsertChapterMarkersAction.h  InsertMediaPropertiesAction.cpp  InsertMediaPropertiesAction.h  MP3TagWriter.cpp  MP3_Interface.h  MP4TagWriter.cpp  MP4TagWriter.h  Malloc.h  MediaProperties.cpp  Platform.h  ReaperProject.cpp  ReaperProject.h  ReaperProjectManager.h  (+28 more)
src/: CMakeLists.txt  Common.h  CustomActionManager.h  ICustomAction.h  ID3V2.cpp  ID3V2Writer.cpp  ISOBMFFContext.h  ITagWriter.h  InsertMediaPropertiesAction.h  Malloc.h  MediaProperties.h  PictureUtilities.h  ReaperGateway.h  ReaperProject.cpp  ReaperProject.h  ReaperProjectManager.h  SaveChapterMarkersAction.h  SaveChapterMarkersToProjectAction.h  StringUtilities.cpp  SystemProperties.cpp  SystemProperties.h  TagWriterFactory.cpp  TagWriterFactory.h  TimeUtilities.cpp  UIFileDialog.cpp  UIMessage.cpp  UIMessage.h  UIMessageClass.h  UIMessageDialog.cpp  UIMessageQueue.h  UIMessageSupervisor.cpp  UIMessageSupervisor.h  VersionHandler.cpp  taglib_include.h
(+409 files in other folders)
